# thoughtwire

./: .gitignore  PROTOCOL.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.roam/: index.db  index.db-shm  index.db-wal
docs/: PROTOCOL.md
examples/: benchmark.py
schemas/: thoughtwire.fbs  thoughtwire.h  thoughtwire.proto  thoughtwire.rs  thoughtwire.schema.json
src/: __init__.py  __main__.py  bridge.py  signing.py
tests/: test_integration.py  test_protocol.py  test_replay.py  test_schema.py  test_signing.py  test_stress.py
thoughtwire/: __init__.py  __main__.py  agent.py  bridge.py  cli.py  native_agent.py  protocol.py  ratelimit.py  schema.py  signing.py
